# TS341

./: .dockerignore  .gitattributes  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  cahier_des_charges.md  pistes.txt  pyproject.toml  pyrightconfig.json  rapport_technique.md  test.py
.github/workflows/: ci.yaml
rapport/: Rapport_Drones.md
runs/detect/predict/: capture_cloudy-daylight_True_10_03_14_35_15_cam1.avi
ts341_project/: YOLO_output.py  __init__.py  background.py  main.py  test_model.py  utils.py
ts341_project/benchmark/: create_results_by_hand.py  create_test_video.py  evaluate.py  evaluate_by_hand.py  evaluations.csv  test_model.py
ts341_project/benchmark/model_results/: Butterworth.csv  Kaggle_dataset.csv  Kaggle_dataset_0.1.csv  Kaggle_dataset_0.3.csv  Kaggle_dataset_0.4.csv  Kaggle_dataset_0.5.csv  Kaggle_dataset_0.6.csv  Kaggle_dataset_0.7.csv  Kaggle_dataset_0.8.csv  Kaggle_dataset_0.9.csv  real_results.csv  test_results.csv
ts341_project/filtre/: Butterworth.py  data_butterworth.csv  filtre.py  kalmann.py
ts341_project/model_training/sim2real_approach/: create_datasets_with_BG.py  dataset_create.py  dataset_create_from_file.py  sim_to_BG_sim.py  simulate_blender_images.py
ts341_project/model_training/sim2real_approach/dataset/labels/: image_000.txt  image_001.txt  image_004.txt  image_006.txt
ts341_project/model_training/sim2real_approach/final_color_dataset/: data.yaml
ts341_project/model_training/sim2real_approach/final_nature_dataset/: data.yaml
ts341_project/model_training/yolo_test/: results.py
ts341_project/model_training/yolo_training/: Entraînement.ipynb  yolov8-yolo-drone-detection-dataset (1).ipynb
ts341_project/model_training/yolo_training/drone_dataset/train/: labels.cache
ts341_project/model_training/yolo_training/drone_dataset/valid/: labels.cache
ts341_project/yolo_test/: compare_results.py  results.py
ts341_project/yolo_test/runs/detect/predict4/: capture_cloudy-daylight_True_10_03_14_35_15_cam1.avi
ts341_project/yolo_test/runs/detect/predict5/: capture_cloudy-daylight_True_10_03_14_35_15_cam1.avi
ts341_project/yolo_test/runs/detect/predict6/: capture_cloudy-daylight_True_10_03_14_35_15_cam1.avi
ts341_project/yolo_test_old/: results_old.py
ts341_project/yolo_training/: data.yaml  yolov8-yolo-drone-detection-dataset (1).ipynb
ts341_project/yolo_training/drone_dataset/train/labels/: pic_1000.txt  pic_1003.txt  pic_1005.txt  pic_1009.txt  pic_101.txt  pic_1010.txt  pic_1014.txt  pic_1020.txt  pic_1026.txt  pic_1027.txt  pic_1028.txt  pic_103.txt  pic_1032.txt  pic_104.txt  pic_1042.txt  pic_1043.txt  pic_1044.txt  pic_1050.txt  pic_1056.txt  pic_1057.txt  pic_1060.txt  pic_1068.txt  (+390 more)
(+393 files in other folders)
