[tool.poetry]
name = "TS341"
version = "0.1.0"
description = "A Python package for TS341"
authors = ["Amandine, Anthony, Clément, Mathis"]
readme = "README.md"
packages = [{include = "./ts341_example/"},
          {include = "./ts341_project/"}]

[build-system]
requires = ["poetry-core >= 2.0.0, <3.0.0 "]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "^3.10"
opencv-python = "^4"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4"

[tool.poetry.scripts]
main = ""
