[project]
name = "TS341"
version = "0.1.0"
description = "A Python package for TS341"
readme = "README.md"

#FIX: Mettez vos adresses mails svp la team.
authors = [
    { name = "Amandine", email = "amandine.email@bordeaux-inp.fr" },
    { name = "Anthony", email = "anthony.email@bordeaux-inp.fr" },
    { name = "Clément", email = "clement.email@bordeaux-inp.fr" },
    { name = "Mathis Pereira Pedro", email = "mpereiraped@bordeaux-inp.fr" },
]

dependencies = [
    "opencv-python >=4",
    "flask >= 3.1.2",
    "ultralytics (>=8.3.228,<9.0.0)",
    "opencv-contrib-python (>=4.12.0.88,<5.0.0.0)",
]

requires-python = ">=3.13"

[build-system]
requires = ["poetry-core >=2.0.0,<3.0.0", "poetry-plugin-python >=0.2.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry-python]
python = ">=3.13"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pytest = "^7.4"
pre-commit = "^4.3.0"
ruff = ">=0.14.4"
pyright = ">=1.1.407,<2.0.0"

[tool.poetry]
package-mode = false
#NOTE: Pour le moment, nous n'exportons pas de pacquets
# packages = [{ include = "./ts341_example/" }, { include = "./ts341_project/" }]

[project.scripts]
main = ""

[tool.ruff.lint]
select = ["D"]
ignore = ["D417"]
[tool.ruff.lint.pydocstyle]
convention = "google"

#Pour pyright
[tool.pyright]
ignore = ["ultralytics"]
typeCheckingMode = "basic"
reportMissingTypeHints = "warning"
reportUnknownVariableType = "warning"
reportMissingImports = false
reportUnknownMemberType = "warning"
